Add main page structure

--- a/index.html
+++ b/index.html
@@ -7,6 +7,184 @@
   <title>Responsive Design</title>
 </head>
 <body>
-
+  <header>
+    <nav>
+      <div class="brand"></div>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+      <div class="newsletters"></div>
+    </nav>
+    <div class="banner">
+      <a href="#">
+        <p>Bigger, Bolder, Better conference</p>
+      </a>
+    </div>
+  </header>
+  <section>
+    <header>
+      <div class="brand large"></div>
+      <h1 class="slogan">The heart of Tech</h1>
+    </header>
+    <a href="#">
+      <article class="article-block"></article>
+    </a><a href="#">
+      <article class="article-block"></article>
+    </a><a href="#">
+      <article class="article-block"></article>
+    </a><a href="#">
+      <article class="article-block"></article>
+    </a><a href="#">
+      <article class="article-block"></article>
+    </a>
+  </section>
+  <div class="separator"></div>
+  <section>
+    <a href="#">
+      <article class="story-block">
+        <div class="story-img"></div>
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit</h2>
+        <p class="story-timestamp">x hours ago</p>
+      </article>
+    </a><a href="#">
+      <article class="story-block">
+        <div class="story-img"></div>
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit</h2>
+        <p class="story-timestamp">x hours ago</p>
+      </article>
+    </a><a href="#">
+      <article class="story-block">
+        <div class="story-img"></div>
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit</h2>
+        <p class="story-timestamp">x hours ago</p>
+      </article>
+    </a><a href="#">
+      <article class="story-block">
+        <div class="story-img"></div>
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit</h2>
+        <p class="story-timestamp">x hours ago</p>
+      </article>
+    </a><a href="#">
+      <article class="story-block">
+        <div class="story-img"></div>
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit</h2>
+        <p class="story-timestamp">x hours ago</p>
+      </article>
+    </a><a href="#">
+      <article class="story-block">
+        <div class="story-img"></div>
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit</h2>
+        <p class="story-timestamp">x hours ago</p>
+      </article>
+    </a><a href="#">
+      <article class="story-block">
+        <div class="story-img"></div>
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit</h2>
+        <p class="story-timestamp">x hours ago</p>
+      </article>
+    </a><a href="#">
+      <article class="story-block">
+        <div class="story-img"></div>
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit</h2>
+        <p class="story-timestamp">x hours ago</p>
+      </article>
+    </a>
+    <a href="#">
+      <span class="more">
+        <p>All news</p>
+      </span>
+    </a>
+  </section>
+  <section class="separator">
+    <section>
+      <a href="#">
+        <article class="explore-block">
+          <div class="title-block"></div>
+          <p></p>
+        </article>
+      </a><a href="#">
+        <article class="explore-block">
+          <div class="title-block"></div>
+          <p>This text is just filler text, designed to span two lines.</p>
+        </article>
+      </a><a href="#">
+        <article class="explore-block">
+          <div class="title-block"></div>
+          <p>This text is just filler text, designed to span two lines.</p>
+        </article>
+      </a><a href="#">
+        <article class="explore-block">
+          <div class="title-block"></div>
+          <p>This text is just filler text, designed to span two lines.</p>
+        </article>
+      </a><a href="#">
+        <article class="explore-block">
+          <div class="title-block"></div>
+          <p>This text is just filler text, designed to span two lines.</p>
+        </article>
+      </a>
+    </section>
+    <section class="hero neo-theme">
+      <h1 class="hero-header">Quirky title goes here</h1>
+      <p>Subscribe to this <a href="#">swanky tech info</a> or check out other<a href="#">tech news</a></p>
+      <input type="email" name="" id="">
+      <button></button>
+      <div class="icons"></div>
+    </section>
+    <section>
+      <h1 class="video-heading">Watch (but not really) these cool things</h1>
+      <div class="video-grid">
+        <div class="main-video"></div>
+        <ul class="video-list">
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
+    </section>
+  </section>
+  <section>
+    <article>
+      <p class="neo-text">Reach your goals</p>
+      <h2>Work with us</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Tempore hic voluptatibus porro dolores exercitationem non perspiciatis voluptatum laborum!
+        Perspiciatis nihil unde, sint nulla porro dolores culpa placeat asperiores voluptatem cumque.
+      </p>
+      <button>Get in touch</button>
+    </article>
+    <div class="media-container">
+      <div class="icon">
+        <p>Media</p>
+      </div>
+      <div class="icon">
+        <p>Events</p>
+      </div>
+      <div class="icon">
+        <p>Spaces</p>
+      </div>
+      <div class="icon">
+        <p>Programs</p>
+      </div>
+    </div>
+    <div class="banner"></div>
+  </section>
+  <footer>
+    <div class="links-container">
+      <div class="block"></div>
+    </div>
+    <div class="list-container">
+      <div class="block"></div>
+    </div>
+    <div class="list-container">
+      <div class="block"></div>
+    </div>
+  </footer>
 </body>
 </html>
